[gd_scene load_steps=7 format=3 uid="uid://dwifatahjw2iw"]

[ext_resource type="Script" path="res://bird.gd" id="1_spr0f"]
[ext_resource type="Material" uid="uid://cffmhpki7ah77" path="res://wing_mat.tres" id="1_us2py"]
[ext_resource type="PackedScene" uid="uid://br826gu3twll6" path="res://wing.tscn" id="1_wmpwx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qgsme"]
radius = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_xmkve"]
material = ExtResource("1_us2py")
size = Vector3(0.1, 1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_qonja"]
material = ExtResource("1_us2py")
size = Vector3(0.3, 2, 0.3)

[node name="Bird" type="CharacterBody3D"]
script = ExtResource("1_spr0f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.197503, -0.00287512)
shape = SubResource("SphereShape3D_qgsme")

[node name="Straight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.346331)
mesh = SubResource("BoxMesh_xmkve")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(1, 5.24537e-09, -5.29134e-09, 3.72529e-09, 0.707107, 0.707107, 7.45058e-09, -0.707107, 0.707107, 0, 0, 0)

[node name="Torso" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
mesh = SubResource("BoxMesh_qonja")
skeleton = NodePath("../..")

[node name="Wings" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="RightWing" parent="Wings" instance=ExtResource("1_wmpwx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0)

[node name="LeftWing" parent="Wings" instance=ExtResource("1_wmpwx")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0)

[node name="D" type="Node" parent="."]

[node name="Vecs" type="Node3D" parent="D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="ForSpeed" type="RayCast3D" parent="D/Vecs"]
visible = false
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(0, 0.486275, 0, 1)

[node name="WingNormal" type="RayCast3D" parent="D/Vecs"]
visible = false
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(0.639216, 0, 0.882353, 1)

[node name="Drag" type="RayCast3D" parent="D/Vecs"]
visible = false
target_position = Vector3(0, 1, 0)
collision_mask = 0
debug_shape_custom_color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[node name="WingUp" type="RayCast3D" parent="D/Vecs"]
visible = false
collision_mask = 0
debug_shape_custom_color = Color(1, 1, 1, 1)

[node name="DragReflect" type="RayCast3D" parent="D/Vecs"]
visible = false
collision_mask = 0
debug_shape_custom_color = Color(0.909804, 0.505882, 0.152941, 1)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
